@@ -446,169 +446,3 @@ on_error:
 	return( -1 );
 }
 
-/* Calculates the recovery key for a certain recovery password and salt
- * Returns 1 if successful or -1 on error
- */
-int libbde_recovery_calculate_key(
-     const uint8_t *recovery_password_hash,
-     size_t recovery_password_hash_size,
-     const uint8_t *salt,
-     size_t salt_size,
-     uint8_t *key,
-     size_t key_size,
-     liberror_error_t **error )
-{
-	libbde_recovery_key_data_t recovery_key_data;
-
-	static char *function = "libbde_recovery_calculate_key";
-
-	if( recovery_password_hash == NULL )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid recovery password hash.",
-		 function );
-
-		return( -1 );
-	}
-	if( recovery_password_hash_size != 32 )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_VALUE_OUT_OF_BOUNDS,
-		 "%s: recovery password hash size value out of bounds.",
-		 function );
-
-		return( -1 );
-	}
-	if( salt == NULL )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid salt.",
-		 function );
-
-		return( -1 );
-	}
-	if( salt_size != 16 )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_VALUE_OUT_OF_BOUNDS,
-		 "%s: salt size value out of bounds.",
-		 function );
-
-		return( -1 );
-	}
-	if( key == NULL )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid key.",
-		 function );
-
-		return( -1 );
-	}
-	if( key_size != 32 )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_VALUE_OUT_OF_BOUNDS,
-		 "%s: key size value out of bounds.",
-		 function );
-
-		return( -1 );
-	}
-	if( memory_set(
-	     &recovery_key_data,
-	     0,
-	     sizeof( libbde_recovery_key_data_t ) ) == NULL )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_MEMORY,
-		 LIBERROR_MEMORY_ERROR_SET_FAILED,
-		 "%s: unable to clear recovery key data.",
-		 function );
-
-		return( -1 );
-	}
-	if( memory_copy(
-	     &( recovery_key_data.initial_sha256_hash ),
-	     recovery_password_hash,
-	     recovery_password_hash_size ) == NULL )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_MEMORY,
-		 LIBERROR_MEMORY_ERROR_COPY_FAILED,
-		 "%s: unable to copy recovery password hash to recovery key data.",
-		 function );
-
-		return( -1 );
-	}
-	if( memory_copy(
-	     &( recovery_key_data.salt ),
-	     salt,
-	     salt_size ) == NULL )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_MEMORY,
-		 LIBERROR_MEMORY_ERROR_COPY_FAILED,
-		 "%s: unable to copy salt to recovery key data.",
-		 function );
-
-		return( -1 );
-	}
-	/* The recovery key is the SHA256 digest hash after 0x100000 key iterations
-	 */
-	for( recovery_key_data.iteration_count = 0;
-	     recovery_key_data.iteration_count < 0x000fffffUL;
-	     recovery_key_data.iteration_count += 1 )
-	{
-		if( libhmac_sha256_calculate(
-		     (uint8_t *) &recovery_key_data,
-		     sizeof( libbde_recovery_key_data_t ),
-		     recovery_key_data.last_sha256_hash,
-		     LIBHMAC_SHA256_HASH_SIZE,
-		     error ) != 1 )
-		{
-			liberror_error_set(
-			 error,
-			 LIBERROR_ERROR_DOMAIN_RUNTIME,
-			 LIBERROR_RUNTIME_ERROR_SET_FAILED,
-			 "%s: unable to calculate SHA256.",
-			 function );
-
-			return( -1 );
-		}
-	}
-	if( libhmac_sha256_calculate(
-	     (uint8_t *) &recovery_key_data,
-	     sizeof( libbde_recovery_key_data_t ),
-	     key,
-	     key_size,
-	     error ) != 1 )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBERROR_RUNTIME_ERROR_SET_FAILED,
-		 "%s: unable to calculate SHA256.",
-		 function );
-
-		return( -1 );
-	}
-	return( 1 );
-}
-
